--- a/index.html
+++ b/index.html
@@ -3,60 +3,76 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Luxoré – Premium Liköre</title>
+    <title>Luxoré – Genuss auf höchstem Niveau</title>
     <style>
         body {
             margin: 0;
-            font-family: Arial, sans-serif;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             background-color: #000;
             color: #d4af37;
-            text-align: center;
         }
         header {
-            padding: 60px 20px;
-            background: #111;
+            background: url('https://images.unsplash.com/photo-1600181953605-01c15d7e27aa?auto=format&fit=crop&w=1470&q=80') no-repeat center center/cover;
+            height: 90vh;
+            color: #fff;
+            text-align: center;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
         }
         header h1 {
-            font-size: 3em;
-            margin-bottom: 0.5em;
+            font-size: 4em;
+            margin: 0;
+            text-shadow: 2px 2px 5px #000;
         }
         header p {
-            font-size: 1.2em;
+            font-size: 1.5em;
+            margin-top: 10px;
+            text-shadow: 1px 1px 3px #000;
+        }
+        .cta {
+            margin-top: 25px;
+            display: inline-block;
+            padding: 12px 28px;
+            background-color: #d4af37;
+            color: #000;
+            font-weight: bold;
+            border-radius: 5px;
+            text-decoration: none;
         }
         section {
-            padding: 40px 20px;
+            padding: 60px 20px;
+            max-width: 1000px;
+            margin: auto;
+        }
+        h2 {
+            margin-top: 0;
+            color: #fff;
         }
         footer {
-            padding: 20px;
             background: #111;
+            color: #999;
+            text-align: center;
+            padding: 20px;
             font-size: 0.9em;
-        }
-        a {
-            color: #d4af37;
-            text-decoration: none;
         }
     </style>
 </head>
 <body>
     <header>
         <h1>Luxoré</h1>
-        <p>Der Geschmack der Verführung – Butterscotch & Sec au Chocolat</p>
+        <p>Genuss auf höchstem Niveau</p>
+        <a class="cta" href="https://instagram.com/luxore.drinks" target="_blank">Jetzt vorbestellen</a>
     </header>
     <section>
-        <h2>Jetzt vorbestellen</h2>
-        <p>Schreib uns direkt auf <a href="https://instagram.com/luxore.drinks" target="_blank">@luxore.drinks</a></p>
+        <h2>Unsere Spezialitäten</h2>
+        <p>Ob Butterscotch oder Sec au Chocolat – bei Luxoré treffen handverlesene Zutaten auf meisterhafte Rezeptur. Unser Anspruch: Premium-Qualität, die man schmeckt.</p>
     </section>
     <section>
-        <h2>Unsere Produkte</h2>
-        <p><strong>Butterscotch:</strong> Cremiger Karamell-Likör mit feiner Vanille-Note.</p>
-        <p><strong>Sec au Chocolat:</strong> Dunkler Schokoladenlikör mit samtiger Würze.</p>
-    </section>
-    <section>
-        <h2>Über Luxoré</h2>
-        <p>Luxoré ist eine Premium-Likörmarke für besondere Momente. Regional, edel, stilvoll.</p>
+        <h2>Kontakt</h2>
+        <p>Du willst vorbestellen oder Händler werden? Schreib uns auf <a href="https://instagram.com/luxore.drinks" target="_blank">Instagram</a> oder per Mail an <a href="mailto:info@luxore-drinks.de">info@luxore-drinks.de</a></p>
     </section>
     <footer>
-        <p>Kontakt: info@luxore-drinks.de | Impressum auf Anfrage</p>
         <p>&copy; 2025 Luxoré. Alle Rechte vorbehalten.</p>
     </footer>
 </body>
